[package]
name = "boomplay-governance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
  "cdylib",
  "lib"
]
name = "boomplay_governance"

[features]
default = []
cpi = [ "no-entrypoint" ]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
]

[dependencies]
anchor-lang = { version = "0.32.1", features = [ "init-if-needed" ] }
anchor-spl = { version = "0.32.1", features = [ "metadata" ] }
mpl-token-metadata = "5.0.0"
